lib/src/compiler/tests/testdata/errors/2.out
error[E003]: mismatching types
 --> line:3:4
  |
3 |    "foo" == 2
  |    ^^^^^    ^ this expression is `integer`
  |    |
  |    this expression is `string`